[package]
name = "echo"
version = "0.1.0"
authors = ["Andrey Smetanin <irqlevel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echo-server"
path = "src/server/main.rs"

[[bin]]
name = "echo-client"
path = "src/client/main.rs"

[dependencies]
tokio = { version = "0.3.0", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
tokio-util = { version = "0.5.0", features = ["full"] }
bytes = "0.6"
futures = "0.3.0"
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.0"
time = "0.1"
bincode = "1.2.1"
byteorder = "1.3.4"
common_lib = { version = "0.1.0", path = "../common_lib"}