[package]
name = "common_lib"
version = "0.1.0"
authors = ["Andrey Smetanin <irqlevel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common_lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0.1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
tokio-util = { version = "0.5.0", features = ["full"] }
bytes = "0.6"
futures = "0.3.0"
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.0"
time = "0.1"
bincode = "1.2.1"
byteorder = "1.3.4"
log = "0.4.11"
uuid = { version = "0.8", features = ["serde", "v4"] }